// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard should render with default props 1`] = `
<Card
  className="root"
>
  <Section>
    <h2
      className="company"
    >
      SEEK Asia
    </h2>
    <h1
      className="jobTitle"
    >
      Developer
    </h1>
  </Section>
  <Section
    className="bodyDescription"
  >
    <p
      className="bodyDescriptionText"
    />
  </Section>
  <Section
    className="footer"
  >
    <div
      className="footerInfo"
    >
      <p>
        <LocationIcon />
         
        Kuala Lumpur
      </p>
      <p>
        <MoneyIcon />
         
        RM999999999 - RM999999999999
      </p>
      <p>
        1h
      </p>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with description props 1`] = `
<Card
  className="root"
>
  <Section>
    <h2
      className="company"
    >
      SEEK Asia
    </h2>
    <h1
      className="jobTitle"
    >
      Developer
    </h1>
  </Section>
  <Section
    className="bodyDescription"
  >
    <p
      className="bodyDescriptionText"
    >
      Hello world
    </p>
  </Section>
  <Section
    className="footer"
  >
    <div
      className="footerInfo"
    >
      <p>
        <LocationIcon />
         
        Kuala Lumpur
      </p>
      <p>
        <MoneyIcon />
         
        RM999999999 - RM999999999999
      </p>
      <p>
        1h
      </p>
    </div>
  </Section>
</Card>
`;
